--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,31 +7,21 @@
     tools:context=".LoginSignup.SplashScreen">
 
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lottie"
 
-
-
-    <ImageView
-        android:id="@+id/theme"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_centerInParent="true"
-        android:background="#FFFFFF" />
-
-
-    <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/lottie"
-
-        android:layout_width="match_parent"
-        android:layout_height="475dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginBottom="256dp"
+        android:layout_centerVertical="true"
+        android:scaleX="1.5"
+        android:scaleY="1.5"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:lottie_autoPlay="true"
         app:lottie_rawRes="@raw/lottie_file" />
 
@@ -39,17 +29,14 @@
         android:id="@+id/app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="500dp"
-        android:layout_marginBottom="150dp"
         android:text="IITinder"
-        android:fontFamily="@font/amarante_regular"
-        android:textColor="@color/purple_700"
-        android:textSize="25sp">
+        android:textColor="@color/black"
+        android:textSize="50sp"
 
-    </TextView>
+        android:layout_marginBottom="50sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/app_title"
@@ -58,10 +45,9 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-
+        android:visibility="gone"
         android:layout_marginTop="637dp"
         android:layout_marginBottom="17dp"
-        android:fontFamily="@font/alegreyasans_blackitalic"
         android:text="The One for EveryOne"
         android:textColor="@color/black"
         android:textSize="28sp">
@@ -69,4 +55,4 @@
     </TextView>
 
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
