--- a/app/src/main/res/layout/activity_interest_picker.xml
+++ b/app/src/main/res/layout/activity_interest_picker.xml
@@ -38,7 +38,8 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="15sp">
+            android:layout_gravity="center_horizontal"
+            android:padding="3sp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/interestConstraint2"
@@ -577,7 +578,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="40dp"
-        android:text="Button"
+        android:text="Submit"
+        android:textAllCaps="false"
+        android:textStyle="bold"
+        android:textSize="16sp"
+        android:textColor="@color/main"
         android:background="@drawable/button"
         android:layout_marginHorizontal="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
